name:                sdl2-image
version:             0.1.0.1
synopsis:            Haskell binding to sdl2-image.
license:             MIT
author:              ccll
maintainer:          cailei@live.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  extra-libraries:
    sdl2

  pkgconfig-depends:
    sdl2 >= 2.0.1,
    SDL2_image >= 2.0.0

  build-depends:
    base ==4.6.*,
    sdl2 ==1.0.*

  hs-source-dirs:
    src

  ghc-options:
    -Wall

  default-extensions:
    CPP, EmptyDataDecls, ForeignFunctionInterface,
    MultiParamTypeClasses, FunctionalDependencies

  exposed-modules:
    Graphics.UI.SDL.Image

  other-modules:
    Graphics.UI.SDL.Utilities

  includes:
    SDL.h

  default-language:
    Haskell2010

